cmake_minimum_required(VERSION 3.29)
project(untitled2)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled2 Switch_case.cpp)
add_executable (Switchcase2 Switch_case2.cpp)
add_executable(randomness randomness.cpp)
add_executable(problem1 problem1.cpp
        problem2.cpp)
add_executable(problem2 problem2.cpp)
